@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2009-2020 Lightbend Inc. <https://www.lightbend.com>
+ * Copyright (C) 2009-2021 Lightbend Inc. <https://www.lightbend.com>
  */
 
 package akka.actor;
@@ -91,7 +91,7 @@ public class JavaAPI extends JUnitSuite {
   public void mustBeAbleToCreateActorWIthConstructorParams() {
     ActorRef ref =
         system.actorOf(
-            Props.create(ActorWithConstructorParams.class, "a", "b", new Integer(17), 18));
+            Props.create(ActorWithConstructorParams.class, "a", "b", Integer.valueOf(17), 18));
     final TestProbe probe = new TestProbe(system);
     probe.send(ref, "get");
     probe.expectMsg("a-b-17-18");
@@ -101,7 +101,7 @@ public class JavaAPI extends JUnitSuite {
   public void mustBeAbleToCreateActorWIthBoxedAndUnBoxedConstructorParams() {
     ActorRef ref =
         system.actorOf(
-            Props.create(ActorWithConstructorParams.class, "a", "b", 17, new Integer(18)));
+            Props.create(ActorWithConstructorParams.class, "a", "b", 17, Integer.valueOf(18)));
     final TestProbe probe = new TestProbe(system);
     probe.send(ref, "get");
     probe.expectMsg("a-b-17-18");
@@ -194,14 +194,7 @@ public class JavaAPI extends JUnitSuite {
     }
 
     public void onReceive(Object msg) {
-      String reply =
-          String.valueOf(a)
-              + "-"
-              + String.valueOf(b)
-              + "-"
-              + String.valueOf(c)
-              + "-"
-              + String.valueOf(d);
+      String reply = a + "-" + b + "-" + c + "-" + d;
       getSender().tell(reply, getSelf());
     }
   }
