@@ -1,13 +1,12 @@
 /*
- * Copyright (C) 2009-2020 Lightbend Inc. <https://www.lightbend.com>
+ * Copyright (C) 2009-2021 Lightbend Inc. <https://www.lightbend.com>
  */
 
 package akka.japi;
 
 import akka.japi.pf.FI;
 import akka.japi.pf.Match;
-import org.junit.Rule;
-import org.junit.rules.ExpectedException;
+import org.junit.Assert;
 import org.junit.Test;
 import org.scalatestplus.junit.JUnitSuite;
 import scala.MatchError;
@@ -15,8 +14,6 @@ import scala.MatchError;
 import static org.junit.Assert.*;
 
 public class MatchBuilderTest extends JUnitSuite {
-
-  @Rule public ExpectedException exception = ExpectedException.none();
 
   @Test
   public void shouldPassBasicMatchTest() {
@@ -41,13 +38,13 @@ public class MatchBuilderTest extends JUnitSuite {
 
     assertTrue(
         "An integer should be multiplied by 10",
-        new Double(47110).equals(pf.match(new Integer(4711))));
+        Double.valueOf(47110).equals(pf.match(Integer.valueOf(4711))));
     assertTrue(
         "A double should be multiplied by -10",
-        new Double(-47110).equals(pf.match(new Double(4711))));
+        Double.valueOf(-47110).equals(pf.match(Double.valueOf(4711))));
 
-    exception.expect(MatchError.class);
-    assertFalse("A string should throw a MatchError", new Double(4711).equals(pf.match("4711")));
+    Assert.assertThrows(
+        "A string should throw a MatchError", MatchError.class, () -> pf.match("4711"));
   }
 
   static class GenericClass<T> {
@@ -71,9 +68,10 @@ public class MatchBuilderTest extends JUnitSuite {
                   }
                 }));
 
-    assertTrue(
+    assertEquals(
         "String value should be extract from GenericMessage",
-        "A".equals(pf.match(new GenericClass<String>("A"))));
+        "A",
+        pf.match(new GenericClass<>("A")));
   }
 
   @Test
@@ -95,9 +93,9 @@ public class MatchBuilderTest extends JUnitSuite {
                   }
                 }));
 
-    exception.expect(MatchError.class);
-    assertTrue(
+    Assert.assertThrows(
         "empty GenericMessage should throw match error",
-        "".equals(pf.match(new GenericClass<String>(""))));
+        MatchError.class,
+        () -> pf.match(new GenericClass<>("")));
   }
 }
